--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
 }
 body{
     font-family: 'Poppins', sans-serif;
+    overflow-x: hidden;
+}
+.client-logo {
+    overflow: hidden;
 }
 a{
     text-decoration:none;
@@ -27,9 +31,6 @@ position:absolute;
 top: 0;
 right: 0;
 z-index:-1;
-}
-body{
-    overflow-x: hidden;
 }
 .container{
     padding-left:25px;
