--- a/css/responsive.css
+++ b/css/responsive.css
@@ -531,6 +531,10 @@
     .time-lecture i {
         margin-right: 10px;
     }
+    .popular-courses h2 {
+        font-size: 31px !important;
+        line-height: 45px;
+    }
     .lecture img {
         margin-right: 10px;
     }
@@ -641,6 +645,10 @@
         font-size: 30px;
         line-height: 50px;
     }
+    .popular-courses h2 {
+        font-size: 31px !important;
+        line-height: 45px;
+    }
     .footer-first-text p {
         font-size: 14px;
     }
@@ -713,6 +721,10 @@
         font-size: 20px;
         line-height: 50px;
         max-width: 300px;
+    }
+    .popular-courses h2 {
+        font-size: 31px !important;
+        line-height: 45px;
     }
     .footer-explore{
         margin-bottom:20px;
