--- a/css/responsive.css
+++ b/css/responsive.css
@@ -718,10 +718,78 @@
     }
 }
 @media(max-width:375px){
+    .hero-section {
+        padding:0px;
+    }
     .main-title-text h2 {
         font-size: 20px;
-        line-height: 50px;
+        line-height: 38px;
         max-width: 300px;
+        margin-bottom: 25px;
+    }
+    .main-title-text p {
+        max-width: 280px;
+        font-size: 16px;
+    }
+    .catergory {
+        margin-left: 54px;
+    }
+    .search-btn {
+        padding-left: 0px;
+    }
+    .search-form button {
+        padding: 15px 28px;
+        border-radius:12px;
+    }
+    .feature-title h2 {
+        font-size: 20px;
+        line-height: 40px;
+        margin-top: 150px;
+    }
+    .feature-ser-text p {
+        font-size: 18px;
+        margin-bottom: 50px;
+    }
+    .popular-course-singleItem {
+        margin: 0 0px 20px 0px;
+    }
+    .populars-btn a {
+        margin-bottom: 60px;
+        margin-top: 20px;
+    }
+    .revaling-left-last-item {
+       margin-left:0px;
+    }
+    .studentRevealing-rightSide p {
+        font-size: 16px;
+        letter-spacing: 0px;
+        margin-bottom: 40px;
+    }
+    .revealing-btn {
+        border-radius: 12px;
+    }
+    .student-desc p {
+        font-size: 16px;
+        color: #434769;
+    }
+    .footer {
+        padding-bottom:0px;
+        border-bottom: 1.5px solid #E7E9F1;
+    }
+    .revaling-last-bg {
+        bottom: -15%;
+        right: -17%;
+        z-index: -1;
+    }
+    .revaling-left-first-item {
+        box-shadow: 0 0 5px #f0f0f0;
+    }
+
+
+    .categories-btn a {
+        border-radius: 12px;
+        margin-bottom: 50px;
+        margin-top: 20px;
     }
     .popular-courses h2 {
         font-size: 31px !important;
@@ -740,14 +808,8 @@
     span.student-num-2::before {
         top: 5px;
     }
-    .main-title-text p {
-        max-width: 280px;
-    }
-    .feature-title h2 {
-        font-size: 20px;
-        line-height: 40px;
-        margin-top: 115px;
-    }
+    
+   
     .search-form {
         max-width: 302px;
         margin-bottom: 80px;
@@ -813,11 +875,7 @@
         font-size: 14px;
         line-height: 25px;
     }
-    .studentRevealing-rightSide p {
-        font-size: 14px;
-        letter-spacing: 0px;
-        margin-bottom: 40px;
-    }
+   
     .student-voice-content h3 {
         font-size: 30px;
     }
@@ -837,13 +895,9 @@
     .payment-item img {
         margin-right: 0px;
     }
-    .revaling-left-last-item {
-        overflow: hidden;
-    }
+    
     .footer-first-text p {
-        font-size: 12px;
+        font-size: 14px;
     }
-    .search-form button {
-        padding: 15px 28px;
-    }
+  
 }
